# 42sh

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
src/ast/: CMakeLists.txt  ast.c  ast.h  ast2.c  ast2.h  ast_struct.h
src/ast/ast_destroy/: CMakeLists.txt  ast_destroy.c  ast_destroy.h  ast_destroy2.c  ast_destroy2.h
src/ast/ast_graphviz/: CMakeLists.txt  ast_graphviz.c  ast_graphviz.h
src/ast/ast_pretty_printer/: CMakeLists.txt  ast_pretty_printer.c  ast_pretty_printer.h  ast_pretty_printer2.c  ast_pretty_printer2.h
src/execution/: CMakeLists.txt  run_ast.c  run_ast.h  run_ast2.c  run_ast2.h
src/execution/builtin/: CMakeLists.txt  builtin.h  continue_break.c  dot.c  my_alias.c  my_cd.c  my_echo.c  my_exit.c  my_export.c  my_unset.c  output_builtin.c  true_false.c
src/execution/expansion/: CMakeLists.txt  expansion.c  expansion.h  expansion_helper.c  expansion_helper.h  expansion_quote.c  expansion_quote.h
src/execution/expansion/expansion_substitution/: CMakeLists.txt  expansion_cmd_subst.c  expansion_cmd_subst.h  expansion_substitution.c  expansion_substitution.h  expansion_var.c  expansion_var.h  special_var.c  special_var.h
src/execution/expansion/field_splitting/: CMakeLists.txt  field_splitting.c  field_splitting.h
src/execution/functions/: CMakeLists.txt  functions.c  functions.h
src/execution/pipe/: CMakeLists.txt  pipe.c  pipe.h
src/execution/redirection/: CMakeLists.txt  redirection.c  redirection.h  redirection_helper.c
src/execution/simple_commands/: CMakeLists.txt  simple_commands.c  simple_commands.h
src/execution/subshell/: CMakeLists.txt  subshell.c  subshell.h
src/lexer/: CMakeLists.txt  lexer.c  lexer.h  lexer_run.c  lexer_run.h  lexer_test.c  operator.c  operator.h  token.c  token.h
src/lexer/lexer_alias/: CMakeLists.txt  lexer_alias.c  lexer_alias.h
src/lexer/lexer_cmd_subst/: CMakeLists.txt  lexer_cmd_subst.c  lexer_cmd_subst.h
src/lexer/lexer_quoting/: CMakeLists.txt  lexer_quoting.c  lexer_quoting.h
src/lexer/lexer_read_input/: CMakeLists.txt  lexer_read_input.c  lexer_read_input.h
src/lexer/lexer_var/: CMakeLists.txt  lexer_var.c  lexer_var.h
src/parser/: CMakeLists.txt  parser.c  parser.h
src/parser/parse_rule/: CMakeLists.txt  parse_rule.c  parse_rule.h  parse_rule2.c  parse_rule2.h
src/parser/parser_helper/: CMakeLists.txt  parser_helper.c  parser_helper.h  parser_helper2.c  parser_helper2.h
src/sh/: CMakeLists.txt  log.c  log.h  sh.c  sh.h  sh_instance.c  sh_instance.h  struct.h
src/sh/input/: CMakeLists.txt  get_input.c  get_input.h
src/tools/: CMakeLists.txt  null_array.c  null_array.h  ope_string.c  ope_string.h  tools.c  tools.h
src/tools/dico/: CMakeLists.txt  dico_func.c  dico_func.h  dico_word.c  dico_word.h  hash.c  hash_map.c  hash_map.h
src/tools/list/: CMakeLists.txt  list.c  list.h  list_helper.c  list_helper.h
src/tools/vector/: CMakeLists.txt  vector.c  vector.h
tests/: Makefile  build.sh  py_env.sh
tests/criterion_test/: CMakeLists.txt  echo_test.c
tests/file_test/: executable.sh
tests/python_test/: TestCase.py  create_test.py  data.yml  search_path.py  test_suite.py
tests/python_test/test_in/step1/command_lists/: cmd_list_many.in  cmd_list_semilicon.in  cmd_list_without_semilicon.in  data.yml  empty_command2.in
tests/python_test/test_in/step1/comments/: data.yml  escaped.in  inline_comment.in  just_comment.in  not_first.in  quote_reserved_word.in  quoted.in  space_comments.in  unterminated_quotes.in
tests/python_test/test_in/step1/if_commands/: 1if_true.in  2if_false.in  3if_true_else.in  4if_false_else.in  5two_if_true.in  6if_border_effects.in  7if_many_commands.in  8if_colliding_key_words.in  data.yml  return_code.in
tests/python_test/test_in/step1/simple_commands/: data.yml  ls.in
tests/python_test/test_in/step1/single_quotes/: bad_quote.in  data.yml  multiple_quote.in  simple_quote.in  spaces_as_arg.in
tests/python_test/test_in/step2/and_or/: all_operator.in  all_operator2.in  and_as_if.in  and_as_if2.in  data.yml  false_and_true_or_true.in  full_and_print.in  full_or_print.in  or_as_if.in  or_as_if2.in  tricky_one.in  true_and_true_and_true_and_true_and_false_or_false.in  true_and_true_and_true_and_true_and_false_or_true.in
tests/python_test/test_in/step2/bang/: data.yml  false_pipe_true.in  not_false_and_false.in  not_false_and_true.in  not_false_or_true.in  not_true_and_false.in  not_true_and_true.in  not_true_or_false.in  true_pipe_false.in
tests/python_test/test_in/step2/error_exit/: data.yml  error_cmd_dont_exit.in  error_cmd_dont_exit2.in  error_cmd_exit.in  error_compound_list.in  error_compound_list_false.in  error_grammar_dont_exit.in  error_grammar_exit.in  error_simple_cmd.in
tests/python_test/test_in/step2/for/: assignment.in  data.yml  echo_for.in  for_in.in  newlines.in  no_body.in  no_list.in  simple.in
tests/python_test/test_in/step2/pipe/: bc_pipe_cat.in  both_cmd_do_not_exist.in  cat_pipe_bc.in  cmd_do_not_exist.in  data.yml  double_pipe.in  echo_cat_pipe.in  false_pipe_false.in  false_pipe_true.in  four_pipes.in  if_pipe.in  right_cmd_does_not_exist.in
tests/python_test/test_in/step2/variables/: data.yml  not_name_var.in
tests/python_test/test_in/step3/command_blocks/: cmd_block_empty_command2.in  cmd_block_many.in  cmd_block_semilicon.in  cmd_block_true_false.in  cmd_block_true_false_and_true.in  cmd_block_without_semilicon.in  data.yml  pipe_ls_echo_cat.in  pipe_ls_echo_cat_bc.in
tests/python_test/test_in/step3/functions/: body_if.in  collision_with_builtin.in  collision_with_command.in  data.yml  different_ast.in  echo_multiple.in  echo_toto.in  empty.in  func_1_redir.in  func_2_redir.in  func_in_func.in  func_in_func_in_func.in  lot_of_new_line.in  redirection.in  redirection_double.in  redirection_double2.in  without_the_close_par.in
tests/python_test/test_in/step3/subshell/: after_exit.in  before_and_after_exit.in  before_exit.in  data.yml  hard.in  in_subshell.in  simple.in  with_exit.in  (+2 more)
tests/python_test/tmp/: echo_test_redir.txt  grep_file_DO_NOT_RM.txt  test.txt
tests/tmp/: new_file.test
(+321 files in other folders)
